# Binance_python_trade_alert_bot

./: main.py  pyproject.toml
